# fun-with-rag

./: Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: RAG.ipynb  twitch_rag.ipynb
