[tool.poetry]
name = "twitch-rag"
version = "0.1.0"
description = "Creating a rag service with python and Jira for tests"
authors = ["ben labaschin <benjaminlabaschin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
farm-haystack = "^1.24.1"
jupyter = "^1.0.0"
ipykernel = "^6.29.2"
python-dotenv = "^1.0.1"
atlassian-python-api = "^3.41.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
